--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,21 +16,16 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-    
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        />
 
 
 <android.support.design.widget.TabLayout
     android:id="@+id/tab_dots"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="10dp"
     app:tabSelectedTextColor="@android:color/background_light"
-    app:tabTextColor="@android:color/black">
+    app:tabTextColor="@android:color/black"
+    app:tabIndicatorColor="#EC1111"
+    app:tabIndicatorHeight="10dp">
 
     <android.support.design.widget.TabItem
         android:layout_width="wrap_content"
