--- a/app/src/main/res/layout/activity_top_artists.xml
+++ b/app/src/main/res/layout/activity_top_artists.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.name.TopArtists.TopArtistsActivity">
+    tools:context=".presentation.topArtists.TopArtistsActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_marginTop="10dp"
