--- a/app/src/main/res/layout/activity_top_tracks.xml
+++ b/app/src/main/res/layout/activity_top_tracks.xml
@@ -4,13 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.name.topTracks.TopTracksActivity">
+    tools:context=".presentation.topTracks.TopTracksActivity">
 
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="10dp"
-        android:id="@+id/top_tracks_recycler"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/fragment_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_marginTop="10dp"
+            android:id="@+id/top_tracks_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
