--- a/app/src/main/res/layout/activity_track.xml
+++ b/app/src/main/res/layout/activity_track.xml
@@ -12,16 +12,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="artist"
-        android:textSize="40sp"
-        android:layout_centerInParent="true"/>
+        android:textSize="15sp"
+        android:layout_centerInParent="true"
+        android:layout_alignParentTop="true"/>
 
     <TextView
         android:id="@+id/track_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="track"
-        android:textSize="40sp"
+        android:textSize="15sp"
         android:layout_below="@id/artist_name"
         android:layout_centerInParent="true"/>
+
+
+    <ScrollView
+        android:id="@+id/scroll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/track_name">
+        <TextView
+            android:id="@+id/track_lyrics"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:isScrollContainer="true"/>
+
+    </ScrollView>
+
+    <ProgressBar
+        android:id="@+id/activity_track_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="visible"/>
 
 </RelativeLayout>
