Добавлено открытие трека в artistActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.mainity"
     >
 
 
@@ -14,6 +13,7 @@
     android:id="@+id/container_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_below="@id/tab_dots"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 
@@ -21,25 +21,25 @@
 <android.support.design.widget.TabLayout
     android:id="@+id/tab_dots"
     android:layout_width="match_parent"
-    android:layout_height="10dp"
+    android:layout_height="30dp"
     app:tabSelectedTextColor="@android:color/background_light"
     app:tabTextColor="@android:color/black"
-    app:tabIndicatorColor="#EC1111"
-    app:tabIndicatorHeight="10dp">
+    app:tabIndicatorColor="#75E75656"
+    app:tabIndicatorHeight="30dp">
 
     <android.support.design.widget.TabItem
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Left" />
+        android:text="Top Tracks"/>
 
     <android.support.design.widget.TabItem
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Center" />
+        android:text="Top Artists" />
 
 </android.support.design.widget.TabLayout>
 
 
 
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
